--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farid Akanda</title>
+    <style>
+        body {
+            text-align: center;
+        }
+        img {
+            border-radius: 100%;
+        }
+    </style>
 </head>
 <body>
     <h1>Farid Akanda</h1>
+    <img src="farid.jpg" alt="farid" widht="200px" height="200px"/>
     
 </body>
 </html>
