--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     
     <div class="main">
-        <h1>Farid Akanda</h1>
+        <h1>Farid Akanda | Computer Programmer and Full Stack Developer.</h1>
     </div>
     <div class="div">
         <img src="farid.jpg" alt="farid" />
