--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farid Akanda</title>
+    <title>Farid Akanda | Computer Programmer and Full Stack Developer.</title>
     <style>
         body {
             text-align: center;
@@ -37,7 +37,7 @@
 <body>
     
     <div class="main">
-        <h1>Farid Akanda | Computer Programmer and Full Stack Developer.</h1>
+        <h1>Farid Akanda</h1>
     </div>
     <div class="div">
         <img src="farid.jpg" alt="farid" />
