--- a/index.html
+++ b/index.html
@@ -22,10 +22,23 @@
             height: 200px;
             padding-top: 10px;
         }
+        .skills {
+            text-align:center;
+            padding: 10px;
+            margin: 20px;
+            
+
+        }
+        .sill {
+            text-align: center;
+            padding: auto;
+            margin: 0;
+        }
         .footer {
             position: fixed;
             background-color: midnightblue;
             color: white;
+            padding-top: -50px;
             left: 0;
             width: 100%;
             bottom: 0;
@@ -41,6 +54,13 @@
     </div>
     <div class="div">
         <img src="farid.jpg" alt="farid" />
+    </div>
+    <div class="skills">
+        <div class="skill">
+            <h1>Skills: </h1>
+            <h2>Languages: C/C++, Python, Javascript and SQL</h2>
+            <h2>Tools &amp; Technologies: Next.js, Django, RestAPI, PostgreSQL, PostmanAPI, Git, Linux</h2>
+        </div>
     </div>
     <div class="footer">
         <h1>Powered by Farid Akanda</h1>
