--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             height: auto;
             padding: 20px;
         }
-        img {
+        .farid {
             border-radius: 50%;
             width: 200px;
             height: 200px;
             padding-top: 10px;
+            object-fit: cover;
+            object-position: 0 10%;
         }
         .skills {
             text-align:center;
@@ -53,7 +55,7 @@
         <h1>Farid Akanda</h1>
     </div>
     <div class="div">
-        <img src="farid.jpg" alt="farid" />
+        <img class="farid" src="farid.jpg" alt="farid" />
     </div>
     <div class="skills">
         <div class="skill">
