--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h1>Farid Akanda</h1>
     </div>
     <div class="div">
-        <img class="farid" src="farid.jpg" alt="farid" />
+        <img class="farid" src="faridimage.jpg" alt="farid" />
     </div>
     <div class="skills">
         <div class="skill">
