--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
             color:darkblue;
         }
         #about {
-            justify-content: start;
-            text-align: start;
+            justify-content: center;
+            text-align: center;
             margin-top: -30px;
             margin-left: 50px;
             padding: 2px;
         }
         #skill {
-            justify-content: start;
-            text-align: start;
+            justify-content: center;
+            text-align: center;
             margin-top: -25px;
             margin-left: 50px;
         }
