--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
         }
         ul li {
             list-style-type:none;
+            display: flex;
+        }
+        .skill_list {
+            display: block;
+            text-align: center;
+            justify-content: center;
+            margin:auto;
         }
         .footer {
             background-color: midnightblue;
@@ -132,40 +139,27 @@
         </section>
         <section id="skill">
             <h1>Skills:</h1>
-            <h2>Languages: 
-                <ul>
-                    <li>C/C++</li>
-                    <li>Python</li>
-                    <li>Javascript</li>
-                    <li>SQL</li>
-                </ul>
-            </h2>
-            <h2>Tools &amp; Technologies: 
-                <ul>
-                    <li>Next.js</li>
-                    <li>Django</li>
-                    <li>PostgreSQL</li>
-                    <li>Git</li>
-                    <li>Postman</li>
-                    <li>Linux</li>
-                </ul>
-            </h2>
-            <h2>Front-end:
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Javascript</li>
-                    <li>TailwindCSS</li>
-                </ul>
-            </h2>
-            <h2>Back-end:
-                <ul>
-                    <li>Django</li>
-                    <li>PostgreSQL</li>
-                    <li>Django RestAPI</li>
-                </ul>
-            </h2>
-            
+            <h2>Languages:</h2>
+            <h3>C/C++</h3>
+            <h3>Python</h3>
+            <h3>Javascript</h3>
+            <h3>SQL</h3>
+            <h2>Tools &amp; Technologies:</h2>
+            <h3>Next.js</h3>
+            <h3>Django</h3>
+            <h3>PostgreSQL</h3>
+            <h3>Git</h3>
+            <h3>Postman</h3>
+            <h3>Linux</h3>
+            <h2>Front-end:</h2>
+            <h3>HTML</h3>
+            <h3>CSS</h3>
+            <h3>TailwindCSS</h3>
+
+            <h2>Back-end:</h2>
+            <h3>Django</h3>
+            <h3>Django RestAPI</h3>
+
         </section>
     </main>
     
