--- a/index.html
+++ b/index.html
@@ -138,25 +138,25 @@
             <h3>I&rsquo; Farid, a computer programmer and full stack developer in Bangladesh.</h3>
         </section>
         <section id="skill">
-            <h1>Skills:</h1>
-            <h2>Languages:</h2>
+            <h1 style="color:darkblue">Skills:</h1>
+            <h2 style="color:skyblue">Languages:</h2>
             <h3>C/C++</h3>
             <h3>Python</h3>
             <h3>Javascript</h3>
             <h3>SQL</h3>
-            <h2>Tools &amp; Technologies:</h2>
+            <h2 style="color:skyblue">Tools &amp; Technologies:</h2>
             <h3>Next.js</h3>
             <h3>Django</h3>
             <h3>PostgreSQL</h3>
             <h3>Git</h3>
             <h3>Postman</h3>
             <h3>Linux</h3>
-            <h2>Front-end:</h2>
+            <h2 style="color:skyblue">Front-end:</h2>
             <h3>HTML</h3>
             <h3>CSS</h3>
             <h3>TailwindCSS</h3>
 
-            <h2>Back-end:</h2>
+            <h2 style="color:skyblue">Back-end:</h2>
             <h3>Django</h3>
             <h3>Django RestAPI</h3>
 
