--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
         <section id="about">
             <h2>Hello!</h2>
-            <h3>I&rsquo;m Farid, a computer programmer and full stack developer in Bangladesh.</h3>
+            <h3>I&rsquo;m Farid, a computer programmer and full stack developer living in Bangladesh.</h3>
         </section>
         <section id="skill">
             <h1 style="color:darkblue">Skills:</h1>
