--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </header>
     <main>
         <div class="image_part">
-            <img class="image_farid" src="faridimage.jpg" alt="farid" />
+            <img class="image_farid" src="faridakanda.jpg" alt="farid" />
             <h1 class="main_name">Farid Akanda</h1>
         </div>
         <section id="about">
