--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         </section>
         <sectio>
-            <div>
+            <div class="pdf">
                 <h1>My College Exam pdf file: </h1>
                 <a href="https://drive.google.com/file/d/1B4m2JGEpkgplip1Uj0HwIqkOg3B8Pwmv/view?usp=drive_link">Exam PDF</a>
             </div>
