--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <!-- This is Navigation part! -->
     <header>
         <div class="main_headers">
             <h1>
