--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- This is Navigation part! -->
+     <!-- Make my header file so awesome and also responsive -->
     <header>
         <div class="main_headers">
             <h1>
