index file is commited

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.twitter.com/faridhakanda">
+                        <a href="https://www.twitter.com/FaridAkandaX">
                             <img src="xt.png" alt="x" />
                         </a>
                     </li>
