gsap removed for box

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
             <h1 class="main_name">Farid Akanda</h1>
         </div>
         <section id="about">
-            <div class="box"></div>
             <h2>Hello!</h2>
             <h3 style="padding-left: 5px; padding-right: 5px;">I&rsquo;m Farid, a computer programmer and full stack developer living in Bangladesh.</h3>
         </section>
@@ -127,7 +126,7 @@
             <p>Powered by</p>
             <h1>Farid Akanda</h1>
             
-            <h4>Farid Akanda &copy; All Rights Reserved <span id="current_year"></span>.</h4>
+            <h4>Farid Akanda &copy; <span id="current_year"></span> All rights reserved.</h4>
         </div>
     </footer>
     
