--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- This is Navigation part! -->
      <!-- Make my header file so awesome and also responsive -->
       <!-- there updated my profile website farid akanda -->
+       <!-- Now updated code again with Farid Akanda -->
     <header>
         <div class="main_headers">
             <h1>
